--- a/src/app/dashboard/log-module/log-module.component.html
+++ b/src/app/dashboard/log-module/log-module.component.html
@@ -1,6 +1,5 @@
 <guild-sidebar [guild]="guild"
-    [loaded]="guild && user"
-    [user]="user">
+    [loaded]="savedGuild && guild">
     <div class="container">
         <header>
             <h1 class="display-4">Audit Log</h1>
