--- a/src/app/docs-sidebar/docs-sidebar.component.html
+++ b/src/app/docs-sidebar/docs-sidebar.component.html
@@ -8,18 +8,6 @@
                 </h2>
             <hr>
 
-            <div class="d-flex justify-content-center">
-                <mat-form-field appearance="outline">
-                    <mat-label for="search">Search</mat-label>
-                    <input #searchInput
-                        (keyup.enter)="emitSearch(searchInput.value)"               
-                        id="search" type="search" placeholder="get guild stats" matInput>
-                </mat-form-field>
-                <button id="searchButton"
-                    (click)="emitSearch(searchInput.value)" 
-                    mat-button><i class="fas fa-search"></i></button>
-            </div>
-
             <div class="navbar-nav">
                 <p class="category">General <i class="fa fa-arrow-right" aria-hidden="true"></i></p>
                 <a class="nav-link" 
@@ -29,13 +17,13 @@
 
                 <hr>
                 
-                <p class="category">Guilds <i class="fas fa-roguild"></i></p>
+                <p class="category">Guilds <i class="fas fa-server"></i></p>
                 <a class="nav-link" 
-                    routerLink="/docs/guild-badges" routerLinkActive="active">Badges</a>
+                    routerLink="/docs/badges" routerLinkActive="active">Badges</a>
                 <a class="nav-link" 
                     routerLink="/docs/get-featured" routerLinkActive="active">Get Featured</a>
                 <a class="nav-link" 
-                    routerLink="/docs/guild-guidelines" routerLinkActive="active">Guidelines</a>
+                    routerLink="/docs/guidelines" routerLinkActive="active">Guidelines</a>
                 <a class="nav-link" 
                     routerLink="/docs/how-it-works" routerLinkActive="active">How It Works</a>
                 <a class="nav-link" 
