--- a/src/app/dashboard/guilds/guild/guild.component.html
+++ b/src/app/dashboard/guilds/guild/guild.component.html
@@ -1,12 +1,12 @@
-<guild-sidebar [user]="user">
-  <section *ngIf="guild && stats && user"
+<guild-sidebar [guild]="guild">
+  <section *ngIf="guild && stats && savedGuild"
     class="container">
     <div class="row color-heading">
         <div class="col-lg-3 col-sm-6">
             <div class="stats cursor-pointer"
-              matTooltip="Date of server approval.">
+              matTooltip="Date of last bump.">
               <i class="fas fa-check"></i>
-              {{ stats.general.approvedAt | cleanDateTime }}
+              {{ guild.lastBumpAt | cleanDateTime }}
             </div>
         </div>
         <div class="col-lg-3 col-sm-6">
@@ -35,7 +35,7 @@
     <div class="row">
         <div class="col-lg-6 col-sm-12">
             <div class="large stats">
-                <votes-widget [id]="user.id"></votes-widget>
+                <votes-widget [id]="guild.id"></votes-widget>
             </div>
         </div>
         <div class="col-lg-6 col-sm-12">
