--- a/src/app/dashboard/save-changes/save-changes.component.css
+++ b/src/app/dashboard/save-changes/save-changes.component.css
@@ -1,6 +1,6 @@
 .text {
     text-align: left;
-    padding-guildtom: 15px;
+    padding-bottom: 15px;
 }
 button, .text {
     color: var(--font) !important;    
