--- a/src/app/guild-card/guild-card.component.html
+++ b/src/app/guild-card/guild-card.component.html
@@ -1,39 +1,29 @@
-<div *ngIf="guild && user"
+<div *ngIf="guild && savedGuild"
   class="fade-in text-center rounded-lg card shadow text-white bg-dark">
-  <div [routerLink]="['/guilds/', user.id]"
+  <div [routerLink]="['/servers/', guild.id]"
     class="cursor-pointer d-flex justify-content-center">
     <img class="shadow rounded-lg card-img-top"
-      [src]="user.displayAvatarURL"
-      [alt]="user.username + ' | ' + cleanTags">
-    <div class="rounded-lg status"
-      [ngClass]="{
-        'status-online': user.presence?.status === 'online',
-        'status-dnd': user.presence?.status === 'dnd',
-        'status-idle': user.presence?.status === 'idle'
-      }"
-      [matTooltip]="user.presence?.status"></div>
+      [src]="guild.iconURL"
+      [alt]="guild.name + ' | ' + cleanTags">
   </div>
   <div class="card-body">
     <p class="stats d-flex justify-content-center">
-      <span *ngIf="guild.stats?.guildCount" class="badge badge-secondary cursor-pointer mr-1" matTooltip="Servers">
-        <i class="fas fa-server"></i> {{ guild.stats.guildCount | number }}
-      </span>
       <span class="badge badge-secondary cursor-pointer ml-1" matTooltip="Votes">
-        <i class="fa fa-chevron-circle-up" aria-hidden="true"></i> {{ guild.votes.length | number }}
+        <i class="fa fa-chevron-circle-up" aria-hidden="true"></i> {{ savedGuild.votes.length | number }}
       </span>
     </p>
     <div class="card-text d-flex flex-column justify-content-center">
-      <h4 [routerLink]="['/guilds/', user.id]"
-        class="cursor-pointer card-title mb-1 mt-2">{{ user.username }}</h4>
-        <p class="color-muted mb-1">{{ guild.listing.overview }}</p>
+      <h4 [routerLink]="['/servers/', guild.id]"
+        class="cursor-pointer card-title mb-1 mt-2">{{ guild.name }}</h4>
+        <p class="color-muted mb-1">{{ savedGuild.listing.overview }}</p>
         <p class="color-secondary">{{ cleanTags }}</p>
     </div>
     <div class="d-flex justify-content-around">
-      <button [routerLink]="['/guilds/' + user.id]"
+      <button [routerLink]="['/servers/' + guild.id]"
         class="bg-secondary rounded-lg" mat-button>
         <i class="fa fa-question" aria-hidden="true"></i>
       </button>
-      <a [href]="guild.listing.invite">
+      <a [href]="savedGuild.listing.invite">
         <button class="rounded-lg" color="success" mat-button>
           <i class="fa fa-plus" aria-hidden="true"></i>
       </button>
