--- a/src/app/guild-vote/guild-vote.component.html
+++ b/src/app/guild-vote/guild-vote.component.html
@@ -3,20 +3,14 @@
 <div *ngIf="guild && user"
   class="container">
   <div class="d-flex justify-content-center mb-3">
-    <a [href]="'/guilds/' + id">
+    <a [href]="'/servers/' + id">
       <img [src]="widgetURL" [alt]="user.username">
     </a>
   </div>
   <div class="d-flex justify-content-center">
-    <button [routerLink]="['/guilds/' + id]"
+    <button [routerLink]="['/servers/' + id]"
       class="bg-secondary mr-2" color="secondary" mat-button>
       <i class="fa fa-chevron-circle-left" aria-hidden="true"></i> Back
-    </button>
-    <button hidden
-      class="bg-info mr-2"
-      matTooltip="Reminders when you can next vote for {{ user.username }} (every 12 hours)."
-      mat-button>
-      <i class="fas fa-bell"></i> Remind Me to Vote
     </button>
     <button *ngIf="!userService.user" routerLink="/login"
       class="bg-primary" mat-button>
@@ -29,7 +23,7 @@
   </div>
 </div>
 
-<div *ngIf="!guild || !user"
+<div *ngIf="!guild || !savedGuild"
   class="container">
   <spinner></spinner>
 </div>
