--- a/src/app/waves/waves.component.css
+++ b/src/app/waves/waves.component.css
@@ -2,7 +2,7 @@
     position:relative;
     width: 100%;
     height:5vh;
-    margin-guildtom:-7px; /*Fix for safari gap*/
+    margin-bottom:-7px; /*Fix for safari gap*/
     min-height:50px;
     max-height:75px;
   }
