--- a/src/app/dashboard/guilds/add-guild/add-guild.component.html
+++ b/src/app/dashboard/guilds/add-guild/add-guild.component.html
@@ -16,38 +16,10 @@
         <div class="row">
             <div class="col-lg-6">
                 <form #f="ngForm" [formGroup]="form">
-                    <mat-form-field *ngIf="!editing"
-                        appearance="outline">
-                        <mat-label>Guild ID</mat-label>
-                        <input formControlName="guildId" type="text" matInput required>
-                        <mat-error *ngIf="form.get('guildId').invalid">Required, and should be a valid
-                            <a href="https://discord.com/developers/docs/reference#snowflakes" rel="nofollow" target="_blank">Snowflake ID.</a>
-                            It also cannot be the ID of a non-guild user.
-                        </mat-error>
-                    </mat-form-field>
-
                     <mat-form-field appearance="outline">
-                        <mat-label>Guild Invite URL</mat-label>
-                        <input formControlName="invite" type="text" matInput required>
-                        <mat-error *ngIf="form.get('invite').invalid">Required, and should be a valid discord link.</mat-error>
-                    </mat-form-field>
-
-                    <p class="p-3">
-                        <a href="https://discordapi.com/permissions.html" target="_blank">Guild Invite Generator</a>
-                    </p>
-
-                    <hr>
-                    
-                    <mat-form-field appearance="outline">
-                        <mat-label>Guild Overview</mat-label>
+                        <mat-label>Overview</mat-label>
                         <textarea formControlName="overview" type="text" matInput required></textarea>
                         <mat-error *ngIf="form.get('overview').invalid">Required, and should be between 64 and 128 characters in length.</mat-error>
-                    </mat-form-field>
-
-                    <mat-form-field appearance="outline">
-                        <mat-label>Command Prefix</mat-label>
-                        <input formControlName="prefix" type="text" matInput required>
-                        <mat-error *ngIf="form.get('prefix').invalid">Required.</mat-error>
                     </mat-form-field>
 
                     <div class="editor-container mt-3">
@@ -67,25 +39,6 @@
                                 [value]="tag.name">{{ tag.name | kebabToTitleCase }}</mat-option>
                         </mat-select>
                         <mat-error *ngIf="form.get('tags').invalid">No more than 5 tags.</mat-error>
-                    </mat-form-field>
-
-                    <mat-form-field appearance="outline">
-                        <mat-label>Support Server Invite</mat-label>
-                        <span matPrefix>discord.gg/</span>
-                        <input class="d-inline" formControlName="supportInvite" type="text" matInput>
-                        <mat-error *ngIf="form.get('supportInvite').invalid">Should be a valid, 7 character, Discord invite code.</mat-error>
-                    </mat-form-field>
-
-                    <mat-form-field appearance="outline">
-                        <mat-label>Github URL</mat-label>
-                        <input formControlName="githubURL" type="text" matInput>
-                        <mat-error *ngIf="form.get('githubURL').invalid">Should be a valid https://github.com URL.</mat-error>
-                    </mat-form-field>
-
-                    <mat-form-field appearance="outline">
-                        <mat-label>Website URL</mat-label>
-                        <input formControlName="websiteURL" type="text" matInput>
-                        <mat-error *ngIf="form.get('websiteURL').invalid">Should be a valid URL.</mat-error>
                     </mat-form-field>
 
                     <div *ngIf="form.hasError('invalid')"
@@ -110,25 +63,25 @@
             <div class="col-lg-6 d-none d-sm-block border-left">
                 <a [routerLink]="['/docs/guild-guidelines']" routerLinkActive="active"
                     class="nav-item nav-link">
-                    <i class="fas fa-book"></i> Guidelines for adding a guild.</a>
+                    <i class="fas fa-book"></i> Guidelines for adding a server.</a>
                 <div *ngIf="!editing"
                     class="alert alert-warning border-warning">
-                    You must join and stay in the <a class="text-primary" href="/server">DList Discord server</a>, for your guild to be accepted.
+                    You must join and stay in the <a class="text-primary" href="/server">DList Discord server</a>, for your server to be accepted.
                     You may only edit your guild once it has been invited by an admin.
                 </div>
 
-                <h3>Guild Card</h3>
+                <h3>Server Card</h3>
                 <p>This is what your guild card will look like to new users.</p>
                 <div class="d-flex justify-content-center mb-5">
                     <guild-card class="mt-5"
                         [guild]="guild"
-                        [guild]="guild"></guild-card>
+                        [savedGuild]="savedGuild"></guild-card>
                 </div>
 
                 <hr>
 
                 <h3>Widgets</h3>
-                <p>Cool widgets that you can use to show off your guild, and get more votes.</p>
+                <p>Cool widgets that you can use to show off your server, and get more votes.</p>
                 <a class="text-secondary" routerLink="/docs/widget">
                     <i class="text-info fas fa-code"></i>
                 </a>
@@ -136,11 +89,11 @@
                 <div class="d-flex justify-content-center">
                     <div class="text-muted uppercase">
                         <p class="mb-0">Large</p>
-                        <img [src]="widgetURL + '?size=large'" alt="Guild Widget Example">
+                        <img [src]="widgetURL + '?size=large'" alt="Server Widget Example">
                         <p class="mt-3 mb-0">Medium</p>
-                        <img [src]="widgetURL + '?size=medium'" alt="Guild Widget Example">
+                        <img [src]="widgetURL + '?size=medium'" alt="Server Widget Example">
                         <p class="mt-3 mb-0">Small</p>
-                        <img [src]="widgetURL + '?size=small'" alt="Guild Widget Example">
+                        <img [src]="widgetURL + '?size=small'" alt="Server Widget Example">
                     </div>
                 </div>
             </div>
@@ -153,7 +106,7 @@
                 class="float-right" color="danger" mat-button>&times;</button>
 
             <guild-preview *ngIf="guild"
-                [guild]="guild" [preview]="true"></guild-preview>
+                [savedGuild]="savedGuild" [preview]="true"></guild-preview>
         </div>
     </div>
 </guild-sidebar>
