--- a/src/app/dashboard/guilds/guild/guild.component.html
+++ b/src/app/dashboard/guilds/guild/guild.component.html
@@ -6,7 +6,7 @@
             <div class="stats cursor-pointer"
               matTooltip="Date of last bump.">
               <i class="fas fa-check"></i>
-              {{ guild.lastBumpAt | cleanDateTime }}
+              {{ savedGuild.lastBumpAt | cleanDateTime }}
             </div>
         </div>
         <div class="col-lg-3 col-sm-6">
