--- a/src/app/guild-card/guild-card.component.html
+++ b/src/app/guild-card/guild-card.component.html
@@ -23,7 +23,7 @@
         class="bg-secondary rounded-lg" mat-button>
         <i class="fa fa-question" aria-hidden="true"></i>
       </button>
-      <a [href]="savedGuild.listing.invite">
+      <a [href]="savedGuild.invite">
         <button class="rounded-lg" color="success" mat-button>
           <i class="fa fa-plus" aria-hidden="true"></i>
       </button>
